--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,8 @@ webmaster_verifications:
 analytics:
   google:
     id: G-9LZDZB133W
+  clarity:
+    id: vj0d2u15k3
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
