--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,11 @@ timezone: Europe/Prague
 
 title: Jan Tydlačka # the main title
 
-tagline: PHP Developer. # it will display as the subtitle
+tagline: Píšu v PHP a nestydím se za to. Skoro. # it will display as the subtitle
 
-description: >- # used by seo meta and the atom feed
-  Blog o PHP, webovém vývoji a dalších technologiích.
+description: >-
+  Webový vývoj bez příkras. Od záludných bugů v PHP po
+  optimalizaci Nette aplikací. Reálné zkušenosti z praxe.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
