--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Europe/Prague
 
 title: Jan Tydlačka # the main title
 
-tagline: Píšu v PHP a nestydím se za to. Skoro. # it will display as the subtitle
+tagline: Backend Engineer & Web Enthusiast. # it will display as the subtitle
 
 description: >-
   Webový vývoj bez příkras. Od záludných bugů v PHP po
